--- a/website/v3/docs/integrations/integration-with-sveltekit.mdx
+++ b/website/v3/docs/integrations/integration-with-sveltekit.mdx
@@ -38,9 +38,8 @@ const yogaApp = createYoga<RequestEvent>({
       },
     },
   },
-  graphiql: {
-    endpoint: '/api/graphql',
-  },
+  // Needed to be defined explicitly because our endpoint lives at a different path other than `/graphql`
+  graphqlEndpoint: '/api/graphql',
 })
 
 export { yogaApp as get, yogaApp as post }
