--- a/website/docs/features/file-uploads.mdx
+++ b/website/docs/features/file-uploads.mdx
@@ -22,6 +22,7 @@ Let's use `File` in this example.
 
 ```ts
 import { createServer } from '@graphql-yoga/node'
+import fs from 'fs'
 
 // Provide your schema
 const server = createServer({
