--- a/website/docs/features/file-uploads.mdx
+++ b/website/docs/features/file-uploads.mdx
@@ -23,6 +23,7 @@ Let's use `File` in this example.
 ```ts
 import { createServer } from '@graphql-yoga/node'
 import fs from 'fs'
+import path from 'path'
 
 // Provide your schema
 const server = createServer({
