--- a/website/tutorial/basic/01-project-setup.mdx
+++ b/website/tutorial/basic/01-project-setup.mdx
@@ -124,7 +124,7 @@ Hello World!
 
 > You can try to change the script, and notice that the server restarts automatically on every change!
 
-The `index.ts` is the project entrypoint - this is where your NodeJS project starts and this runs the rest of the code.
+The `main.ts` is the project entrypoint - this is where your NodeJS project starts and this runs the rest of the code.
 
 Congratulations! You now have a ready-to-use project with NodeJS, TypeScript and development scripts configured.
 
