--- a/website/docs/features/file-uploads.mdx
+++ b/website/docs/features/file-uploads.mdx
@@ -36,6 +36,7 @@ const server = createServer({
       }
       type Mutation {
         readTextFile(file: File!): String!
+        saveFile(file: File!): Boolean
       }
     `,
     resolvers: {
