--- a/website/tutorial/advanced/02-subscriptions.mdx
+++ b/website/tutorial/advanced/02-subscriptions.mdx
@@ -37,7 +37,7 @@ You will do this by first adding an instance of `PubSub` to the context, just as
 To get start with an instance of your `PubSub`, create a new file called `src/pubsub.ts` with the following:
 
 ```typescript
-import { createPubSub } from '@graphql-yoga/subscription'
+import { createPubSub } from 'graphql-yoga'
 
 // 1
 export type PubSubChannels = {}
